--- a/Presentation/EmailTemplates/MeetingScheduled.html
+++ b/Presentation/EmailTemplates/MeetingScheduled.html
@@ -45,7 +45,7 @@
                                 <td style="font-size:14px;">
 
                                     <p style="margin:6px 0;">
-                                        <strong>Subject:</strong> {{MeetingSubject}}
+                                        <strong>Subject:</strong> TalentedStaff Supplier Call
                                     </p>
 
                                     <p style="margin:6px 0;">
